--- a/style.css
+++ b/style.css
@@ -98,3 +98,127 @@ nav {
 [type="checkbox"]:checked ~ nav {
   left: 0;
 }
+
+/*Social media*/
+.soc-media {
+  position: absolute;
+  bottom: 5px;
+}
+
+.soc-media li {
+  float: left;
+}
+
+.soc-media a {
+  padding: .5em 0;
+  width: 2em;
+  font-weight: normal;
+  text-align: center;
+}
+
+/*Background Wrapper for page*/
+.wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+   background: url("https://images.unsplash.com/photo-1508349937151-22b68b72d5b1?ixlib=rb-1.2.1&w=1000&q=80");
+  background-size: cover;
+}
+
+.wrapper > h1 {
+  position: absolute;
+  top: 45%;
+  width: 100%;
+  color: #494444;
+  font-size: 3em;
+  text-align: center;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+/*Pages*/
+section {
+  position: absolute;
+  top: 0;
+  width: 0;
+  height: 100%;
+  overflow: hidden;
+  /*hide all on 0% width*/
+  -webkit-transition: all .75s;
+  transition: all .75s;
+}
+
+:target {
+  width: 100%;
+}
+
+section .content {
+  margin: 1em auto;
+  max-width: 900px;
+  width: 60%;
+  color: #494444;
+}
+
+section h1,
+section h2,
+section h3 {
+  margin-bottom: .5em;
+  text-align: center;
+}
+
+section p {
+  margin: .5em 0;
+  font-family: 'lobster';
+}
+
+/*Home page*/
+/*About page*/
+.about {
+  background: rgba(255, 255, 255, 0.75);
+}
+
+/*Companies page*/
+.clients {
+  background: rgba(255, 255, 255, 0.75);
+}
+
+.clients .row {
+  float: left;
+  margin-bottom: 1em;
+  width: 100%;
+}
+
+.client-box {
+  float: left;
+  margin: 0 3em;
+  width: 100px;
+  height: 100px;
+}
+
+.client-box img {
+  display: block;
+  width: 100%;
+}
+
+/*Contact page*/
+.contact {
+  background: rgba(255, 255, 255, 0.75);
+}
+
+.map-container,
+.map-container iframe {
+  margin: 2em auto;
+  width: 300px;
+  height: 300px;
+  background: url(https://reservation.booking.expert/api/googlemap.png?h=fbjhbg&lang=en-us&marker=red&size=1280x550&zoom=15) no-repeat center center;
+  border: 0.5em solid #494444;
+  border-radius: 50%;
+  overflow: hidden;
+}
